--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "Five Star Index"
 description: "A minimal Markdown blog by Sunho"
 # For project pages (username.github.io/repo): set your username and repo here
-url: "https://<your-username>.github.io"   # change to your GitHub username
+url: "https://williammillerworks.github.io"   # change to your GitHub username
 baseurl: "/five-star-index"                # change to your repo name; set to "" for user/organization site
 
 timezone: Asia/Seoul
